--- a/README.rdoc
+++ b/README.rdoc
@@ -2,9 +2,11 @@
 
 This gem hooks into the HasOffers API as documented here: http://www.hasoffers.com/wiki/Category:API
 
+
 == Install
 
 gem install ngin-hasoffers --source http://gems.github.com
+
 
 == Usage
 
@@ -20,6 +22,11 @@ Example usage: (more examples in tests)
                                     'status' => 'active',
                                     'expiration_date' => (Date.today + 30).to_s)
 
+When running in development mode, by default real api calls are not made. Dummy responses are returned from the DummyResponse class. Set the REMOTE_TEST environment variable to "1" to make real api calls when in development mode like so:
+
+env REMOTE_TEST=1 script/server
+
+
 == Tests
 
 The tests can be ran in two modes:
@@ -31,5 +38,8 @@ Does not make real API calls. Dummy responses are returned by the DummyResponse 
 === Live mode
 * env REMOTE_TEST=1 rake test
 Makes real api calls. Uses the HasOffer credentials in config/has_offers.yml which by default is set to the demo account credentials. HasOffers does not supply a test gateway so be careful to not run these tests against your live HasOffers account.
+
+
+== Contributing
 
 The HasOffers API is huge and this gem implements only a portion of what is available with their API. With this framework in place it should be easy to extend the gem to support API calls that are not yet supported. Please send contributions as git patches.  
