changing REMOTE_TEST env variable to HAS_OFFERS_LIVE

--- a/README.rdoc
+++ b/README.rdoc
@@ -22,9 +22,13 @@ Example usage: (more examples in tests)
                                     'status' => 'active',
                                     'expiration_date' => (Date.today + 30).to_s)
 
-When running in development mode, by default real api calls are not made. Dummy responses are returned from the DummyResponse class. Set the REMOTE_TEST environment variable to "1" to make real api calls when in development mode like so:
+When running in development mode, by default live api calls are not made. Dummy responses are returned from the DummyResponse class. Set the HAS_OFFERS_LIVE environment variable to "1" to make live api calls when in development mode like so:
 
-env REMOTE_TEST=1 script/server
+env HAS_OFFERS_LIVE=1 script/server
+
+If you always want live api calls in development mode then you can add this line to your development.rb file:
+
+HasOffers::Base.api_mode = :live
 
 
 == Tests
@@ -33,13 +37,13 @@ The tests can be ran in two modes:
 
 === Test mode
 * rake test
-Does not make real API calls. Dummy responses are returned by the DummyResponse class which is also useful in development mode to avoid real API calls
+Does not make live API calls. Dummy responses are returned by the DummyResponse class which is also used in development mode to avoid live API calls.
 
 === Live mode
 * env REMOTE_TEST=1 rake test
-Makes real api calls. Uses the HasOffer credentials in config/has_offers.yml which by default is set to the demo account credentials. HasOffers does not supply a test gateway so be careful to not run these tests against your live HasOffers account.
+Makes live api calls. Uses the HasOffer credentials in config/has_offers.yml which by default is set to the demo account credentials. HasOffers does not supply a test gateway so be careful to not run these tests against your live HasOffers account.
 
 
 == Contributing
 
-The HasOffers API is huge and this gem implements only a portion of what is available with their API. With this framework in place it should be easy to extend the gem to support API calls that are not yet supported. Please send contributions as git patches.  
+The HasOffers API is huge and this gem implements only a portion of what is available with their API. With this framework in place it should be easy to extend the gem for API calls that are not yet supported. Please send contributions as git patches to luke.ludwig@tstmedia.com, or alternatively create a fork and send a git pull request via github.   
