--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,5 +1,10 @@
 = HasOffers CHANGELOG
 
+== Version 0.1.3
+* Bug fix - it's possible for AffiliateBilling to return an array of nil, instead
+  of an array of invoices.
+* Updated various unit tests to fix failing tests while HAS_OFFERS_LIVE is enabled.
+
 == Version 0.1.2
 * Minor bug fix for running without the has_offers.yml config file
 
