--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,4 +1,5 @@
-= HasOffers CHANGELOG
+== Version 0.1.4
+  * Create a class method to get and set the @@base_uri, with tests
 
 == Version 0.1.3
 * Bug fix - it's possible for AffiliateBilling to return an array of nil, instead
