--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,5 +1,10 @@
+== Version 0.1.6
+* Fix issues with error hash on Response object
+* Fix issues that occur when sending GET requests over a proxy, switched
+  to POST params where possible
+
 == Version 0.1.4
-  * Create a class method to get and set the @@base_uri, with tests
+* Create a class method to get and set the @@base_uri, with tests
 
 == Version 0.1.3
 * Bug fix - it's possible for AffiliateBilling to return an array of nil, instead
