--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,6 @@
+== Version 0.1.10
+* Add OfferPixel as an API target. OfferPixel: create, update.
+
 == Version 0.1.9
 * Add OfferUrl as an API target. OfferUrl: create, update.
 
