BAC-995 : Add method findAll to OfferPixel model

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,6 @@
+== Version 0.1.11
+* Add OfferPixel method: findAll
+
 == Version 0.1.10
 * Add OfferPixel as an API target. OfferPixel: create, update.
 
